# voxcpm-runpod-1.5B

./: Dockerfile  LICENSE  README.md  handler.py  hub.json  pyproject.toml  qtest_predownload.py  requirements.txt  rp_handler.py
.claude/: settings.json
.runpod/: hub.json  resources.pkl  tests.json
runpod/: Dockerfile  README.md  hub.json  tests.json
