[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cosyvoice-runpod"
version = "0.1.0"
description = "CosyVoice3 TTS serverless on RunPod"
requires-python = ">=3.11"
dependencies = [
    "runpod",
    "soundfile",
    "modelscope",
    "transformers==4.51.3",
    "vllm",
]
